--- a/modulo_1/ex02_Caracteres_parágrafos_e_quebras_de_linha/index.html
+++ b/modulo_1/ex02_Caracteres_parágrafos_e_quebras_de_linha/index.html
@@ -34,6 +34,8 @@
     <p>Vamos adicionar alguns emoji: 
         &#x1F596;
         &#x1F913;
+        &#x1f914;
     </p>
+    <p> Lorem ipsum &lt;dolor&gt; sit amet /consectetur adipisicing elit. <br>Dolor repellendus dicta odit. Non aspernatur temporibus molestiae ipsa delectus earum et harum tempora tenetur, esse natus necessitatibus enim recusandae excepturi ab!</p>
 </body>
 </html>
