--- a/modulo_1/desafios/03-desafio-do-mapa/index.html
+++ b/modulo_1/desafios/03-desafio-do-mapa/index.html
@@ -15,7 +15,7 @@
         <img src="imagens/mapa06.png" alt=""><br>
         <img src="imagens/mapa07.png" alt="">
         <img src="imagens/mapa08.png" alt="">
-        <img src="imagens/mapa09.png" alt="">></p>
+        <img src="imagens/mapa09.png" alt=""></p>
 
    <h2>Mais um desafio concluído 
     &#x1F596;
