--- a/modulo_1/desafios/05-desafio-perfil/index.html
+++ b/modulo_1/desafios/05-desafio-perfil/index.html
@@ -13,9 +13,8 @@
 
   <h2>COMO FALAR COMIGO?</h2>
   <UL>
-    <LI><img src="imagens/icone-github.png" alt="" > a
- - Se escreve no meu Github</LI>
-    <LI><img src="imagens/icone-linkedin.png" alt="">  - Se escreve no meu Linkedin</LI>
+    <LI><img src="imagens/icone-github.png" alt=""> - <a href="">Se escreve no meu Github</a></LI>
+    <LI><img src="imagens/icone-linkedin.png" alt="">  - <a href="https://www.linkedin.com/messaging/thread/2-NmFlZmU5ZTYtNzI5MS00MWE3LWI1MTQtY2UwOTBhNTQ4MmNjXzAxMA==/">Se escreve no meu Linkedin</a></LI>
   </UL>
 </body>
 </html>
