--- a/modulo_1/desafios/06-desafio-das-tags/index.html
+++ b/modulo_1/desafios/06-desafio-das-tags/index.html
@@ -10,9 +10,9 @@
 
     <p>Nesse dasafio iremos colocar um caixa de texto nas tags, quando passar o mouse emcima a caixa <br> de texto deve aparacer com as informações!</p>
     <h2>
-        Corpo <br>
-        H1 <br>
-        p
+        <abbr title="essa é a cabeça do codigo">Head</abbr> <br>
+        <abbr title="Onde colocamos o titulo do codigo">H1</abbr> <br>
+        <abbr title="Paragrafo no codigo">p</abbr>
 
     </h2>
 </body>
