--- a/modulo_1/desafios/07-desafio-imagens/index.html
+++ b/modulo_1/desafios/07-desafio-imagens/index.html
@@ -6,7 +6,7 @@
     <title>Imagem flexível</title>
 </head>
 <body>
-    <h1>desafio imagens</h1>
-    <p>nesse desafio o usuario vai abrir a imagem de acordo com a nessecidade do usuario. <br> A imagem vai se adptar conforme aparelho utilizado, celular, tablet ou PC.</p>
+    <h1>Desafio com imagens</h1>
+    <p>Nesse desafio o usuario vai abrir a imagem de acordo com a nessecidade. <br> A imagem vai se adptar conforme aparelho utilizado, celular, tablet ou PC.</p>
 </body>
 </html>
