--- a/modulo_1/desafios/07-desafio-imagens/index.html
+++ b/modulo_1/desafios/07-desafio-imagens/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Desafio com imagens</h1>
     <p>Nesse desafio o usuario vai abrir a imagem de acordo com a nessecidade. <br> A imagem vai se adptar conforme aparelho utilizado, celular, tablet ou PC.</p>
+
+    <picture>
+        <source media="(max-width:1000px)" srcset="imagens/paisagem-m.png" type="image/paisagem-m">
+        <img src="imagens/paisagem-g.png" alt="imagen grande">
+    </picture>
 </body>
 </html>
