--- a/modulo_1/ex11_inserindo_videos/index.html
+++ b/modulo_1/ex11_inserindo_videos/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Inserindo vídeos hospedados localmente</h1>
-    <p>Este vídeo está hospedado no meu próprio servidor.</p>
+    <!--<p>Este vídeo está hospedado no meu próprio servidor.</p>
 
     <video width="560" poster="imagens/limoes-capa.png" controls autoplay loop>
         <source src="midia/meu-video.mp4" type="video/mp4">
@@ -22,5 +22,11 @@
 
     <h1>Inserindo vídeos do Vimeo</h1>
     <iframe src="https://player.vimeo.com/video/197093965?color=ff9933&portrait=0" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+    <h1>Inserindo audio</h1>
+    <audio src="audio/WhatsApp Ptt 2024-05-19 at 13.20.00.ogg" controls></audio> <br> -->
+
+    <video src="midia/meu-video.mp4" controls width="600"></video><br>
+
 </body>
 </html>
