--- a/modulo_1/ex09_links_externos/index.html
+++ b/modulo_1/ex09_links_externos/index.html
@@ -6,7 +6,7 @@
     <title>Trabalhando com links</title>
 </head>
 <body>
-    <h1>Usando links externos</h1>
+    <!--<h1>Usando links externos</h1>
     <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório público no GitHub</a></p>
     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external">canal gratuito no YouTube</a></p>
 
@@ -18,6 +18,6 @@
     <ul>
         <li><a href="livro/meulivro.pdf" download="meulivro.pdf" type="application/pdf">Baixar o livro em PDF</a></li>
         <li><a href="livro/meulivro.zip" download="meulivro.zip" type="application/zip">Livro compactado em ZIP</a></li>
-    </ul>
+    </ul> -->
 </body>
 </html>
