--- a/modulo_1/desafios/09-indicando-videos/pg00.html
+++ b/modulo_1/desafios/09-indicando-videos/pg00.html
@@ -6,12 +6,11 @@
     <title>PG01</title>
 </head>
 <body>
-    <h1>PAGINA 01</h1>
+    <h1>PAGINA INICIAL</h1>
     
-    <a href="pg02.html"><img src="imagens/video01.png" alt=""></a>
+    <a href ="pg01.html"><img src="imagens/video01.png"alt=""></a>
     <a href="pg03.html"><img src="imagens/video02.png" alt=""></a> <br>
-    <img src="imagens/video03.png" alt="">
-    <img src="imagens/video04.png" alt="">
+
     
 </body>
 </html>
