--- a/modulo_1/ex13_estilos_locais_internos/index.html
+++ b/modulo_1/ex13_estilos_locais_internos/index.html
@@ -6,23 +6,22 @@
     <title>Estilos Locais / Internos</title>
     <style>
         body {
-            background-color: lightsteelblue;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 20px;
+            background-color: aqua;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 15px;
         }
 
         h1 {
-            color:darkblue;
-            background-color: lightblue;
+            background-color: brown;
+            font-size: 2em;
         }
-
         h2 {
-            color: darkred;
+            background-color: blueviolet;
+        }
+        p {
+            background-color: aliceblue;color: rgb(15, 15, 15);
         }
 
-        p {
-            text-align: justify;
-        }
     </style>
 </head>
 <body>
