--- a/modulo_1/ex13_estilos_locais_internos/index.html
+++ b/modulo_1/ex13_estilos_locais_internos/index.html
@@ -19,7 +19,7 @@
             background-color: blueviolet;
         }
         p {
-            background-color: aliceblue;color: rgb(15, 15, 15);
+            background-color: aliceblue;color: rgb(15, 15, 15); text-align: justify; 
         }
 
     </style>
