--- a/modulo_1/desafios/08- navegação/pag02.html
+++ b/modulo_1/desafios/08- navegação/pag02.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Pagina 02</h1>
     <p>Voçe está na segunda pagina do site, caso queira ir para tercerira <a href="pag03.html" rel="prev">clique aqui</a></p>
-    <p> <a href="index.html">Clique aqui para voltar</a></p>
+    <p style="text-align: right;"> <a href="index.html">Clique aqui para voltar</a></p>
 </body>
 </html>
