--- a/modulo_1/desafios/08- navegação/index.html
+++ b/modulo_1/desafios/08- navegação/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Pagina 01</h1>
 
-    <p>Está é a primeira pagina do site, acesse a segunda pagina <a href="pag02.html" rel="next">clicando aqui</a></p>
+    <p style="text-align: center;">Está é a primeira pagina do site, acesse a segunda pagina <a href="pag02.html" rel="next">clicando aqui</a></p>
 </body>
 </html>
