--- a/modulo_1/ex016_cores/cores02treino02.html
+++ b/modulo_1/ex016_cores/cores02treino02.html
@@ -10,7 +10,7 @@
         }
 
         body {
-            background-image: linear-gradient(to bottom,#7F0CFF ,  #CD06E7 10%, #FC00CF, #F52729, #FEBF00 25%);
+            background-image: linear-gradient(to left,#7F0CFF,  #CD06E7, #FC00CF, #F52729, #FEBF00);
             background-attachment: fixed;
         }
 
