--- a/modulo_1/ex17_/fonte01.html
+++ b/modulo_1/ex17_/fonte01.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes em CSS</title>
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
 </head>
 <body>
     <h1>Trabalhando com Fontes</h1>
