--- a/modulo_1/ex18_fontes_do_google/fonte01.html
+++ b/modulo_1/ex18_fontes_do_google/fonte01.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes com o Google Fonts</title>
-    <style>
+    <style> 
+     @import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family:'';
             font-size: 16px;
             color: rgb(7, 7, 7);
         }
@@ -17,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Titulo</h1>
+    <h1 style="color: aqua;">Titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, iste, temporibus odio incidunt quas accusamus maxime eius aliquid et, velit eveniet fugit? Iste rem sequi distinctio nesciunt, sit nobis cumque.</p>
 </body>
 </html>
