--- a/modulo_1/ex18_fontes_do_google/fonte01.html
+++ b/modulo_1/ex18_fontes_do_google/fonte01.html
@@ -5,20 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes com o Google Fonts</title>
     <style> 
-     @import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
         body {
-            font-family:'';
-            font-size: 16px;
+            font-family: 'open sans';
+            font-size: 32px;
             color: rgb(7, 7, 7);
         }
 
         h1 {
-            font-family: 'Times New Roman', Times, serif;
+            font-family: 'open sans';
+            font-size: 2em;
+
         }
     </style>
 </head>
 <body>
-    <h1 style="color: aqua;">Titulo</h1>
+    <h1>Titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, iste, temporibus odio incidunt quas accusamus maxime eius aliquid et, velit eveniet fugit? Iste rem sequi distinctio nesciunt, sit nobis cumque.</p>
 </body>
 </html>
