--- a/modulo_1/ex18_fontes_do_google/fonte01.html
+++ b/modulo_1/ex18_fontes_do_google/fonte01.html
@@ -7,6 +7,8 @@
     <style> 
  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
+ @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
         body {
             font-family: 'open sans';
             font-size: 32px;
@@ -18,10 +20,17 @@
             font-size: 2em;
 
         }
+
+        h2 {
+            font-family: 'Anton display';
+        }
+        
     </style>
 </head>
 <body>
     <h1>Titulo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, iste, temporibus odio incidunt quas accusamus maxime eius aliquid et, velit eveniet fugit? Iste rem sequi distinctio nesciunt, sit nobis cumque.</p>
+
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque voluptates recusandae omnis eaque error cum sint porro laboriosam perferendis ea tempora voluptas magni adipisci, quis animi a id praesentium.</h2>
 </body>
 </html>
