--- a/modulo_1/ex18_fontes_do_google/fonte02.html
+++ b/modulo_1/ex18_fontes_do_google/fonte02.html
@@ -7,9 +7,9 @@
     <style> 
     @font-face {
         font-family: 'love';
-        src: url('Aliqa.ttf') format('truetype');
+        src: url('fonts/love Aliqa.otf') format('opentype');
         font-weight: normal;
-        font-style: italic;
+        font-style: normal;
         /*
         Tipos de format
         -opentype (otf)
@@ -21,12 +21,13 @@
     }
 
     body{
-        font-family: 'love';
+        font-family: 'love' Arial, Helvetica, sans-serif;
     }
 
     h1 {
-        font-family: 'love', Times, serif;
+        font-family:'love';
         font-size: 3em;
+        font-weight: normal;
     }
 
     </style>
