testando @font-face

--- a/modulo_1/ex18_fontes_do_google/fonte01.html
+++ b/modulo_1/ex18_fontes_do_google/fonte01.html
@@ -9,6 +9,10 @@
 
  @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+ @import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
+
+ @import url('https://fonts.googleapis.com/css2?family=Spicy+Rice&family=Tiny5&display=swap');
+
         body {
             font-family: 'open sans';
             font-size: 32px;
@@ -24,6 +28,11 @@
         h2 {
             font-family: 'Anton display';
         }
+
+        h4 {
+            font-family: 'Spicy Rice';
+
+        }
         
     </style>
 </head>
@@ -32,5 +41,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, iste, temporibus odio incidunt quas accusamus maxime eius aliquid et, velit eveniet fugit? Iste rem sequi distinctio nesciunt, sit nobis cumque.</p>
 
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat neque voluptates recusandae omnis eaque error cum sint porro laboriosam perferendis ea tempora voluptas magni adipisci, quis animi a id praesentium.</h2>
+
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, iste iusto dolorem dolore et consequatur? Minima omnis, amet explicabo inventore reiciendis a corrupti quisquam sit architecto, obcaecati voluptatum enim. Ipsa?</h3>
+
+    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam, sapiente cum delectus vero totam maiores consectetur dolores, velit laudantium adipisci quibusdam eaque, voluptates ipsa. Adipisci facere ex tempore? Sit!</h4>
 </body>
 </html>
