--- a/modulo_1/ex18_fontes_do_google/fonte02.html
+++ b/modulo_1/ex18_fontes_do_google/fonte02.html
@@ -20,7 +20,7 @@
         font-style: normal;
         }
         @font-face {
-            font-family: 'C' ;
+            font-family: 'A' ;
         src: url('fonts/Coffee Spark.otf') format('opentype'), url('fonts/Coffee Spark.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
