--- a/modulo_1/ex18_fontes_do_google/fonte02.html
+++ b/modulo_1/ex18_fontes_do_google/fonte02.html
@@ -29,7 +29,7 @@
             font-family: 'D' ;
         src: url('fonts/The Centurion.otf') format('opentype'), url('fonts/The Centurion.ttf') format('truetype');
         font-weight: normal;
-        font-style: normal;
+        font-style:  italic;
         }
     body{
         font-family: 'B', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
