--- a/modulo_1/ex19_seletores/seletor01.html
+++ b/modulo_1/ex19_seletores/seletor01.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <h1 id="Principal">Criando Sites com HTML e CSS</h1>
-    <h2>HTML intermediario</h2>
+    <h2 class="basico">HTML basico</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quam minima possimus corporis consectetur obcaecati inventore repellendus officia quia culpa<span class="basico"> odit, saepe eveniet aspernatur deleniti maxime laudantium libero at aliquid.</span></p>
+
+    <h2 class="intermediario destaque">HTML intermediario</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quam minima possimus corporis consectetur obcaecati inventore repellendus officia quia culpa odit, saepe eveniet aspernatur deleniti maxime laudantium libero at aliquid.</p>
 
-    <h2>HTML avançado</h2>
+    <h2 class="avançado">HTML avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium harum ullam ut tempore commodi culpa a quod consequatur, id non veritatis molestiae ipsam. Officiis tenetur, soluta ducimus similique odit molestiae?</p>
 
-    <h1>Aprendendo CSS</h1>
+    <h1 class="destaque">Aprendendo CSS</h1>
 
-    <h2>CSS básico</h2>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum labore laborum libero perspiciatis dolore vitae deleniti ducimus doloribus corrupti rem assumenda, veniam quos consequatur quod hic itaque est nulla? Impedit.</p>
 
-    <h2>CSS intermediario</h2>
+    <h2 class="intermediario">CSS intermediario</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur earum quos veniam quaerat quis ex adipisci. Rem rerum harum esse minus? A mollitia numquam consequuntur recusandae minima nulla hic iusto!</p>
 
-    <h2>CSS avançado</h2>
+    <h2 class="avançado">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam eius alias nostrum in fugiat nemo unde odit veniam sint, eum minus maiores exercitationem? Ratione ab veniam at ipsam corporis.</p>
 
 
