--- a/modulo_1/ex20/pseudo_classe.html
+++ b/modulo_1/ex20/pseudo_classe.html
@@ -8,6 +8,8 @@
         div {
             background-color: aqua;
             text-align: center;
+            /* altuta */height: 200px;
+            /* largura */width: 200px;
         }
     </style>
 </head>
