--- a/modulo_1/ex20/pseudo_classe.html
+++ b/modulo_1/ex20/pseudo_classe.html
@@ -6,17 +6,23 @@
     <title>Pseudo Classes</title>
     <style>
         div {
-            background-color: aqua;
+            display: inline-block;
+            background-color: #bdecec;
             text-align: center;
-            /* altuta */height: 200px;
-            /* largura */width: 200px;
+            height: 200px;/* altuta */
+            width: 200px;/* largura */
+            border: 2px solid rgb(0, 0, 0);
+        }
+
+        div:hover {
+            background-color: blue;
         }
     </style>
 </head>
 <body>
-    <div>01</div>
-    <div>02</div>
-    <div>03</div>
+    <div id="d1">01</div>
+    <div id="d2">02</div>
+    <div id="d3">03</div>
 
 </body>
 </html>
