--- a/modulo_1/ex20/hover.html
+++ b/modulo_1/ex20/hover.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo de Hover</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            border: 3px;
+        }
+        div:hover{
+            color: brown;
+            border: 2px solid rgb(0, 0, 0);
+            text-align: center;
+            font-size: 30px;
+            
+        }
+    </style>
 </head>
 <body>
     <h1> Exemplo de Hover</h1>
     <p>Passe o mouse sobre o texto abaixo</p>
     <div>
-        Passe o mousse aqui
+        Passe o mouse aqui
     </div>
 </body>
 </html>
