--- a/modulo_1/ex20/links.html
+++ b/modulo_1/ex20/links.html
@@ -18,6 +18,16 @@
         a:visited {
             color: rgb(43, 226, 43);
         }
+
+        a:hover {
+           text-decoration: overline underline;
+           color: aqua;
+           background-color: rgb(0, 0, 0);
+        }
+
+        a:active {
+            color: blueviolet;
+        }
     </style>
 </head>
 <body>
