--- a/modulo_1/ex20/links.html
+++ b/modulo_1/ex20/links.html
@@ -33,7 +33,7 @@
 <body>
     <h1>Personalizando Links</h1>
     <ul>
-        <li>Repositorio <a href="https://github.com/">GitHub</a></li>
+        <li>Repositorio <a href="https://github.com/" target="_blank">GitHub</a></li>
         <li>Rede social <a href="https://ags.eslcloud.com.br/users/sign_in">Linkedin</a></li>
         <li></li>
     </ul>
