--- a/modulo_1/ex21/caixa01.html
+++ b/modulo_1/ex21/caixa01.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Exemplo de caixa box level</h1>
-    <p>Paragrafos tembem são exemplos de box-level, mas os <a href="#">links são exemplos</a> </p>
+    <p>Paragrafos tembem são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a> vamos ver como tudo isso funciona </p>
 
 </body>
 </html>
