--- a/modulo_1/notas/notas.html
+++ b/modulo_1/notas/notas.html
@@ -54,7 +54,7 @@
     <p>Tipos de caixa</p>
     <p>box-level > pula para linha de baixo, vai ocupar a largura inteira da tela, depois pula de novo para linha de baixo exemplos: ir no códico <!--<div>/<h1><h6>/<p>/<main>/<header>/<nav>/<aside>/<footer>/<form>/<video></video></p>-->
     <p>inline-level > abre uma caixa na mesma linha, só ocupa o espaço que precisa e depois continua na mesma linha: ir no código <!--<span>/<a>/<code>/<small>/<strong>/<em>/<sup>-<sub>/<label>/<button>/<input>/<select></p>-->
-    <p></p>
+    <p>user agent = configurações do navegador</p>
     <p></p>
     <p></p>
     <p></p>
