--- a/modulo_1/ex21/caixa01.html
+++ b/modulo_1/ex21/caixa01.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de caixas</title>
+    <style>
+        h1 {
+            background-color: aqua;
+            height: 300px;
+            width: 300px;
+            border-width: 10px;
+            border-style: dotted;
+
+            padding-top: 10px;
+            padding-right: 10px;
+            padding-left: 10px;
+            padd
+        }
+
+        a {
+            border-width: 10px;
+            border-style: solid;
+            border-color: brown;
+
+        }
+    </style>
 </head>
 <body>
     <h1>Exemplo de caixa box level</h1>
-    <p>Paragrafos tembem são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a> vamos ver como tudo isso funciona </p>
+    <p>Paragrafos tembem são exemplos de box-level, mas os <a href="#">links são exemplos de caixas inline-level</a>. vamos ver como tudo isso funciona. </p>
 
 </body>
 </html>
