--- a/modulo_1/ex21/caixa01.html
+++ b/modulo_1/ex21/caixa01.html
@@ -15,13 +15,17 @@
             padding-top: 10px;
             padding-right: 10px;
             padding-left: 10px;
-            padd
+            
         }
 
         a {
             border-width: 10px;
             border-style: solid;
             border-color: brown;
+
+            padding-top: 10px;
+            padding-right: 10px;
+            padding-left: 10px;
 
         }
     </style>
