--- a/modulo_1/ex21_modelos_de_caixas/caixa01.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa01.html
@@ -6,15 +6,36 @@
     <title>Modelo de caixas</title>
     <style>
         h1 {
-            background-color: aqua;
+            background-color: rgb(38, 243, 243);
             height: 300px;
             width: 300px;
-            border-width: 10px;
-            border-style: dotted;
 
-            padding-top: 10px;
+            /*border-width: 10px;
+            border-style: ridge;
+            border-color: rgba(99, 99, 248, 0.548);*/
+
+            border: 10px ridge blanchedalmond;
+
+           /* padding-top: 10px;
             padding-right: 10px;
-            padding-left: 10px;
+            padding-bottom: 10px;
+            padding-left: 10px;*/
+
+            padding: 10px 10px 10px 20px ;
+
+           /* margin-top: 10px;
+            margin-right: 10px;
+            margin-bottom: 50px;
+            margin-left: 20px;*/
+
+            margin: 10px 10px 50px 10px;
+
+           /* outline-width: 5px;
+            outline-style: dotted;
+            outline-color: blue;*/
+
+            outline: 5px dotted blue;
+
             
         }
 
