--- a/modulo_1/ex21_modelos_de_caixas/caixa01.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa01.html
@@ -6,6 +6,7 @@
     <title>Modelo de caixas</title>
     <style>
         h1 {
+            display: inline;
             background-color: rgb(38, 243, 243);
             height: 300px;
             width: 300px;
@@ -14,6 +15,7 @@
             border-style: ridge;
             border-color: rgba(99, 99, 248, 0.548);*/
 
+            /*short rend= serve para */
             border: 10px ridge blanchedalmond;
 
            /* padding-top: 10px;
