--- a/modulo_1/ex21_modelos_de_caixas/caixa01.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa01.html
@@ -23,14 +23,14 @@
             padding-bottom: 10px;
             padding-left: 10px;*/
 
-            padding: 10px 10px 10px 20px ;
+            padding: 10px 10px 5px 20px ;
 
            /* margin-top: 10px;
             margin-right: 10px;
             margin-bottom: 50px;
             margin-left: 20px;*/
 
-            margin: 10px 10px 50px 10px;
+            margin: 50px 50px 50px 50px;
 
            /* outline-width: 5px;
             outline-style: dotted;
@@ -42,6 +42,7 @@
         }
 
         a {
+            display: block;
             border-width: 10px;
             border-style: solid;
             border-color: brown;
