--- a/modulo_1/ex21_modelos_de_caixas/caixa02.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa02.html
@@ -9,16 +9,28 @@
     <header>
         <h1>Meu site</h1>
         <nav>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
+            <a href="#">Link</a>
         </nav>
     </header>
     <main>
-
+        <section id="assuntos"></section>
+        <section id="noticias">
+            <article>
+                <h2>noticias sobre o Brasil</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit similique dolor omnis at ea reiciendis provident sapiente, neque magni debitis repellendus consequatur quis? Itaque necessitatibus autem, nam beatae recusandae dolor.</p>
+                <aside>
+                    <p>Artigo escrito por Jose da Silva</p>
+                </aside>
+            </article>
+        </section>
     </main>
+    <footer>
+        <p>Desenvolvido pelo Gilmar</p>
+    </footer>
 
 </body>
 </html>
