--- a/modulo_1/ex21_modelos_de_caixas/caixa02.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa02.html
@@ -53,8 +53,12 @@
             background-color: rgba(0, 0, 0, 0.466);
             color: rgb(255, 255, 255);
             text-align: center;
-            padding: 4px;
-            margin: 0;
+            padding: 10px;
+            margin: 0px;
+        }
+
+        footer > p {
+            margin: 0px;
         }
 
     </style>
