--- a/modulo_1/ex21_modelos_de_caixas/caixa02.html
+++ b/modulo_1/ex21_modelos_de_caixas/caixa02.html
@@ -17,17 +17,18 @@
         }
 
         nav {
-            background-color: rgb(177, 177, 177);
-            color: black;
-            padding: 3px;
-            margin: 20px;
+            background-color: rgba(240, 21, 21, 0.123);
+            color: rgb(255, 255, 255);
+            padding: 10px;
+            box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.281);
+           
         }
 
         nav > a {
             text-decoration: none;
-            color: aliceblue;
-            font-weight: bolder;
-            margin-right: 30px;
+            color: rgb(255, 255, 255);
+            font-weight: normal;
+            margin-right: 15px;
         }
 
         nav > a:hover {
@@ -38,6 +39,8 @@
             background-color: #d3c8c8;
             padding: 10px;
             margin: 15px;
+            border-radius: 4px 5px 5px 5px;
+            box-shadow: 10px 10px 10px 10px black;
         }
 
         article {
@@ -59,6 +62,16 @@
 
         footer > p {
             margin: 0px;
+        }
+
+        div#bola {
+            height: 200px;
+            width: 200px;
+            margin: 10px;
+            background-color: black;
+            border-radius: 30%;
+
+
         }
 
     </style>
@@ -91,6 +104,7 @@
     <footer>
         <p>Desenvolvido pelo Gilmar</p>
     </footer>
+    <div id="bola"></div>
 
 </body>
 </html>
