--- a/modulo_1/desafios/10-projeto/andoid.html
+++ b/modulo_1/desafios/10-projeto/andoid.html
@@ -49,7 +49,8 @@
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/UHQPdP8qgrk?si=fCH8C3yFUd4tQCdI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <aside>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UHQPdP8qgrk?si=fCH8C3yFUd4tQCdI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
             
             <aside>
                 <h3>[EXTRA] Quer aprender mais?</h3>
