--- a/modulo_1/desafios/10-projeto/andoid.html
+++ b/modulo_1/desafios/10-projeto/andoid.html
@@ -27,7 +27,7 @@
 
             <h2>A primeira versão</h2>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="http://www.notte.com.br/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.softonic.com.br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="http://www.notte.com.br/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.softonic.com.br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
                 <source media="(max-width: 650px )" srcset="imagens/dan-droids-pq.png">
@@ -37,7 +37,7 @@
 
             <h2>Surge um novo mascote</h2>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
                 <source media="(max-width: 650px)" srcset="imagens/irina-blok-pq.jpg">
@@ -75,13 +75,13 @@
                 <p>Infelizmente, o <strong>Android</strong>
                      Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
-                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/history/" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             
             </aside>
 
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
-    <footer><p>Site criado por Gustavo Guanabara para o <a href="file:///C:/Users/AGS/Documents/Curso-de-HTML-e-CSS/modulo_1/desafios/10-projeto/andoid.html">Curso em Video</a>.</p></footer>
+    <footer><p>Site criado por Gustavo Guanabara para o <a href="file:///C:/Users/AGS/Documents/Curso-de-HTML-e-CSS/modulo_1/desafios/10-projeto/andoid.html" class="externo">Curso em Video</a>.</p></footer>
 </body>
 </html>
