--- a/modulo_1_2/desafios/10-projeto/andoid.html
+++ b/modulo_1_2/desafios/10-projeto/andoid.html
@@ -83,6 +83,6 @@
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
-    <footer><p>Site criado por Gustavo Guanabara para o <a href="file:///C:/Users/AGS/Documents/Curso-de-HTML-e-CSS/modulo_1/desafios/10-projeto/andoid.html" class="externo">Curso em Video</a>.</p></footer>
+    <footer><p>Site criado para testar os conhecimentos <a href="file:///C:/Users/AGS/Documents/Curso-de-HTML-e-CSS/modulo_1/desafios/10-projeto/andoid.html" class="externo">Curso em Video</a>.</p></footer>
 </body>
 </html>
