--- a/modulo_3/ex022/fundo002.html
+++ b/modulo_3/ex022/fundo002.html
@@ -6,9 +6,9 @@
     <title>Personalização dos fundos</title>
     <style>
         body {
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px 100px;
-            background-repeat: repeat-y;
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');/*imagens hospedada externamente*/
+            background-size: 100px 100px; /*configuração do tamanho da imagem*/
+            background-repeat: no-repeat; /*não deixa repetir as imagens*/
         }
     </style>
 </head>
