--- a/modulo_3/ex022/fundo002.html
+++ b/modulo_3/ex022/fundo002.html
@@ -9,6 +9,8 @@
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');/*imagens hospedada externamente*/
             background-size: 100px 100px; /*configuração do tamanho da imagem*/
             background-repeat: no-repeat; /*não deixa repetir as imagens*/
+            /*background-repeat: repeat-x; repetição para direita*/
+            /*background-repeat: repeat-y; repetição para baixo*/
         }
     </style>
 </head>
