--- a/modulo_3/ex022/fundo003.html
+++ b/modulo_3/ex022/fundo003.html
@@ -10,9 +10,10 @@
             border: 1px solid black;
             margin: 15px;/*espaço entre os blocos*/
             border-radius: 10px;
-            background-image: url('imagens/wallpaper002.jpg');
+            background-image: url('imagens/wallpaper002.jpg');/*colocando imagem*/
         }
 
+        /* Abaixo foi criado uma div > q  para cada classe bloco, assim cada classe(imagem) vai ter uma configuração de posição diferente  */
         div#q1 {
             background-position: left top;
         }
