--- a/modulo_3/ex022/fundo004.html
+++ b/modulo_3/ex022/fundo004.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Posicionamento</title>
+    <style>
+        body {
+            height: 100vh; /* vh > (view higth) é a parte branca do conteudo aberto no google, é possível alterar a porcentagem*/
+            border: 5px dashed black;
+            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
+            background-size: 100px;
+            background-repeat: no-repeat;
+            background-position: top right ; /*é possível alterar as posições com rith, center rigt center, buttom etc...*/
+        }
+    </style>
 </head>
 <body>
     
