--- a/modulo_3/ex022/fundo007.html
+++ b/modulo_3/ex022/fundo007.html
@@ -10,9 +10,10 @@
             background-size: 100% 100%; /*Centraliza a imagemde fundo */
 
             position: relative;
-            height: 500px; /*altura*/
-            background-color: purple;
+            height: 96vh; /*altura*/
             padding: 10px; /*espaço dentro do container*/
+            background-color: purple;
+            
         }
 
         #conteudo {
@@ -23,10 +24,10 @@
             height: 200px; /*altura*/
             width: 400px; /*Largura*/
             background-color: yellow;
-            left: 25%;
-            top: 25%;
+            left: 50%;
+            top: 50%;
 
-            transform: translate(10px 10px );
+            transform: translate(-50%, -50%); /* Usando esse metodo é possível centralizar e ou configurar a posição da caixa conforme vontade*/
 
             /*margin: auto; /*Para centralizar o conteudo no horizontal, da esquerda para direita*/
         }
