--- a/modulo_3/Desafio 12/index.html
+++ b/modulo_3/Desafio 12/index.html
@@ -8,9 +8,10 @@
 <body>
 
     <header>
-        Cordel Moderno
-        Por Milton Duarte
-        [SITE: https://www.recantodasletras.com.br/poesias/3186743]
+        <h1>Cordel Moderno</h1>
+
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Du</p>arte</a>
+        
     </header>
 
     Estou ficando cansado
@@ -78,7 +79,7 @@
     Deixe que Deus interprete.
 
     <footer>
-        <p>Site criado pelo <a href="https://professorguanabara.github.io/projeto-cordel/" target="_blank">Gustavo Guanabara</a></p><!-- target="_blank serve para abrir uma outra aba -->
+        <p> Site criado pelo Gustavo Guanabara <a href="https://professorguanabara.github.io/projeto-cordel/" target="_blank">Gustavo Guanabara</a></p><!-- target="_blank serve para abrir uma outra aba -->
     </footer>
 </body>
 </html>
